--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
-	"name": "obsidian-gemini-assistant",
-	"version": "1.0.0",
-	"description": "Enhance the audio player with interacive lyrics for obsidian",
-	"main": "main.js",
-	"scripts": {
-		"dev": "node esbuild.config.mjs",
-		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "MIT",
-	"devDependencies": {
-		"@tsconfig/svelte": "^5.0.2",
-		"@types/node": "^16.11.6",
-		"@typescript-eslint/eslint-plugin": "5.29.0",
-		"@typescript-eslint/parser": "5.29.0",
-		"builtin-modules": "3.3.0",
-		"esbuild": "0.17.3",
-		"esbuild-svelte": "^0.8.0",
-		"obsidian": "latest",
-		"prettier": "^3.0.3",
-		"prettier-plugin-svelte": "^3.0.3",
-		"svelte": "^4.2.2",
-		"svelte-preprocess": "^5.0.4",
-		"tslib": "2.4.0",
-		"typescript": "5.2.2"
-	}
+    "name": "obsidian-gemini-assistant",
+    "version": "1.0.0",
+    "description": "Enhance the audio player with interacive lyrics for obsidian",
+    "main": "main.js",
+    "scripts": {
+        "dev": "node esbuild.config.mjs",
+        "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+        "version": "node version-bump.mjs && git add manifest.json versions.json"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "MIT",
+    "devDependencies": {
+        "@tsconfig/svelte": "^5.0.2",
+        "@types/node": "^16.11.6",
+        "@typescript-eslint/eslint-plugin": "5.29.0",
+        "@typescript-eslint/parser": "5.29.0",
+        "@codemirror/autocomplete": "^6.2.0",
+        "builtin-modules": "3.3.0",
+        "esbuild": "0.17.3",
+        "esbuild-svelte": "^0.8.0",
+        "obsidian": "latest",
+        "prettier": "^3.0.3",
+        "prettier-plugin-svelte": "^3.0.3",
+        "svelte": "^4.2.2",
+        "svelte-preprocess": "^5.0.4",
+        "tslib": "2.4.0",
+        "typescript": "5.2.2"
+    }
 }
